# aws-saas-webapp-template

./: .env.template  .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  start.sh
.github/actions/docker-image/: action.yml
.github/actions/test-python/: action.yaml
.github/workflows/: ci.yml
frontend/: components.json  next.config.ts  package-lock.json  package.json
frontend/src/: store.ts  userSlice.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/auth/: login-modal.tsx
frontend/src/components/pages/: landing-page.tsx  logged-in-user.tsx
frontend/src/components/ui/: credit-balance.tsx  header.tsx
frontend/src/hooks/: useRefreshSession.ts
frontend/src/pages/: _document.tsx  index.tsx
frontend/src/pages/api/: [...path].ts  update-session.ts
frontend/src/pages/api/auth/: [...nextauth].ts
src/saas_backend/: app.py  constants.py  logger.py
src/saas_backend/auth/: constants.py  database.py  models.py  router.py
src/saas_backend/auth/decorators/: decorators.py
src/saas_backend/auth/jwt_handler/: jwt_handler.py
src/saas_backend/auth/user_manager/: user_manager.py
src/saas_backend/tests/: conftest.py
src/saas_backend/tests/auth/: test_routes.py
src/saas_backend/tests/utils/: user.py
terraform/: main.tf  outputs.tf  variables.tf
